--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Playwright artifacts
+playwright-report/
+test-results/
+
 # Editor directories and files
 .idea
 *.suo
