แก้ไฟล์ config.js เพราะไม่ขึ้นหน้าpage2

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "6704101320-Narongpol-chunu",
+  "name": "6704101320-Narongpol-chunu-",
   "version": "0.0.1",
   "description": "A Quasar project for Narongpol Chunu",
   "productName": "Narongpol chunu",
