i will fix pull

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "6704101320-Narongpol-chunu-",
   "version": "0.0.1",
-  "description": "A Quasar project for Narongpol Chunu",
+  "description": "A Quasar project for Narongpol Chunu-",
   "productName": "Narongpol chunu",
   "author": "Narongpol chunu",
   "type": "module",
